avro_derive/tests/ui/avro_rs_373_rename_all_fields.stderr
error: AvroSchema derive does not work for enums with non unit structs
 --> tests/ui/avro_rs_373_rename_all_fields.rs:5:6
  |
5 | enum Foo {
  |      ^^^
